--- a/ManagementSystem/ManagementSystem.Web/Pages/_Layout.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/_Layout.cshtml
@@ -78,7 +78,7 @@
         @RenderBody()
     </main>
 
-    <footer class="fixed-footer font-small black white-text">
+    @*<footer class="fixed-footer font-small black white-text">
         <hr />
         <div class="container">
             <div class="d-flex justify-content-center mt-1 pb-1">
@@ -89,7 +89,7 @@
                 <p class="px-2" style="margin:0;">&copy; 2018 RazorSites.ManagementSystem</p>
             </div>
         </div>
-    </footer>
+    </footer>*@
 
 
     <!-- SCRIPTS -->
