Updated material dashboard to v2.0 and fixed the sideNav
The problem was with previous version material dashboard. It used Bootstrap 3.6 while we use 4.0.

--- a/ManagementSystem/ManagementSystem.Web/Pages/Index.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Index.cshtml
@@ -9,12 +9,12 @@
     <div class="row">
         <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="card card-stats">
-                <div class="card-header" data-background-color="orange">
-                    <i class="material-icons">content_copy</i>
-                </div>
-                <div class="card-content">
-                    <p class="category">Used Space</p>
-                    <h3 class="title">
+                <div class="card-header card-header-warning card-header-icon">
+                    <div class="card-icon">
+                        <i class="material-icons">content_copy</i>
+                    </div>
+                    <p class="card-category">Used Space</p>
+                    <h3 class="card-title">
                         49/50
                         <small>GB</small>
                     </h3>
@@ -29,12 +29,12 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="card card-stats">
-                <div class="card-header" data-background-color="green">
-                    <i class="material-icons">store</i>
-                </div>
-                <div class="card-content">
-                    <p class="category">Revenue</p>
-                    <h3 class="title">$34,245</h3>
+                <div class="card-header card-header-success card-header-icon">
+                    <div class="card-icon">
+                        <i class="material-icons">store</i>
+                    </div>
+                    <p class="card-category">Revenue</p>
+                    <h3 class="card-title">$34,245</h3>
                 </div>
                 <div class="card-footer">
                     <div class="stats">
@@ -45,12 +45,12 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="card card-stats">
-                <div class="card-header" data-background-color="red">
-                    <i class="material-icons">info_outline</i>
-                </div>
-                <div class="card-content">
-                    <p class="category">Fixed Issues</p>
-                    <h3 class="title">75</h3>
+                <div class="card-header card-header-danger card-header-icon">
+                    <div class="card-icon">
+                        <i class="material-icons">info_outline</i>
+                    </div>
+                    <p class="card-category">Fixed Issues</p>
+                    <h3 class="card-title">75</h3>
                 </div>
                 <div class="card-footer">
                     <div class="stats">
@@ -61,12 +61,12 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="card card-stats">
-                <div class="card-header" data-background-color="blue">
-                    <i class="fa fa-twitter"></i>
-                </div>
-                <div class="card-content">
-                    <p class="category">Followers</p>
-                    <h3 class="title">+245</h3>
+                <div class="card-header card-header-info card-header-icon">
+                    <div class="card-icon">
+                        <i class="fa fa-twitter"></i>
+                    </div>
+                    <p class="card-category">Followers</p>
+                    <h3 class="card-title">+245</h3>
                 </div>
                 <div class="card-footer">
                     <div class="stats">
