--- a/ManagementSystem/ManagementSystem.Web/Pages/_Layout.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/_Layout.cshtml
@@ -13,9 +13,10 @@
     <!-- Material Design Bootstrap -->
     <link href="~/css/mdb.min.css" rel="stylesheet">
     <!--  Material Dashboard CSS    -->
-    <link href="~/css/material-dashboard.css?v=1.2.0" rel="stylesheet" />
+    <link href="~/css/material-dashboard.css" rel="stylesheet" />
     <!-- Custom style -->
     <link href="~/css/style.css" rel="stylesheet">
+    @RenderSection("Styles", required: false);
 </head>
 <body>
     <header>
@@ -107,17 +108,17 @@
 
     <script src="~/js/material.min.js" type="text/javascript"></script>
     <!--  Charts Plugin -->
-    <script src="../assets/js/chartist.min.js"></script>
+    <script src="~/js/chartist.min.js"></script>
     <!--  Dynamic Elements plugin -->
-    <script src="../assets/js/arrive.min.js"></script>
+    <script src="~/js/arrive.min.js"></script>
     <!--  PerfectScrollbar Library -->
-    <script src="../assets/js/perfect-scrollbar.jquery.min.js"></script>
+    <script src="~/js/perfect-scrollbar.jquery.min.js"></script>
     <!--  Notifications Plugin    -->
-    <script src="../assets/js/bootstrap-notify.js"></script>
+    <script src="~/js/bootstrap-notify.js"></script>
     <!--  Google Maps Plugin    -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
     <!-- Material Dashboard javascript methods -->
-    <script src="../assets/js/material-dashboard.js?v=1.2.0"></script>
+    <script src="~/js/material-dashboard.js?v=1.2.0"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
