Change idea, fix basic content

--- a/ManagementSystem/ManagementSystem.Web/Pages/Finance/OperationCost/Create.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Finance/OperationCost/Create.cshtml
@@ -1,11 +1,5 @@
 ﻿@page
-@model ManagementSystem.Web.Pages.Finance.CreateModel
-
-@{
-    ViewData["Title"] = "Create";
-}
-
-<h2>Create</h2>
+@model ManagementSystem.Web.Pages.Finance.OperationCost.CreateModel
 
 <h4>OperationCost</h4>
 <hr />
