--- a/ManagementSystem/ManagementSystem.Web/Pages/Finance/OperationCost/Delete.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Finance/OperationCost/Delete.cshtml
@@ -1,11 +1,5 @@
 ﻿@page
-@model ManagementSystem.Web.Pages.Finance.DeleteModel
-
-@{
-    ViewData["Title"] = "Delete";
-}
-
-<h2>Delete</h2>
+@model ManagementSystem.Web.Pages.Finance.OperationCost.DeleteModel
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
