--- a/ManagementSystem/ManagementSystem.Web/Pages/Finance/OperationCost/Details.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Finance/OperationCost/Details.cshtml
@@ -1,11 +1,5 @@
 ﻿@page
-@model ManagementSystem.Web.Pages.Finance.DetailsModel
-
-@{
-    ViewData["Title"] = "Details";
-}
-
-<h2>Details</h2>
+@model ManagementSystem.Web.Pages.Finance.OperationCost.DetailsModel
 
 <div>
     <h4>OperationCost</h4>
