--- a/ManagementSystem/ManagementSystem.Web/Pages/Finance/OperationCost/Edit.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Finance/OperationCost/Edit.cshtml
@@ -1,11 +1,5 @@
 ﻿@page
-@model ManagementSystem.Web.Pages.Finance.EditModel
-
-@{
-    ViewData["Title"] = "Edit";
-}
-
-<h2>Edit</h2>
+@model ManagementSystem.Web.Pages.Finance.OperationCost.EditModel
 
 <h4>OperationCost</h4>
 <hr />
