--- a/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/Complaint/Create.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/Complaint/Create.cshtml
@@ -26,14 +26,14 @@
             <div class="form-group">
                 <div class="checkbox">
                     <label>
-                        <input asp-for="Complaint.IsReviewed" /> @Html.DisplayNameFor(model => model.IsReviewed))
+                        <input asp-for="Complaint.IsReviewed" /> @Html.DisplayNameFor(model => model.Complaint.IsReviewed))
                     </label>
                 </div>
             </div>
             <div class="form-group">
                 <div class="checkbox">
                     <label>
-                        <input asp-for="Complaint.IsAnonymous" /> @Html.DisplayNameFor(model => model.IsAnonymous))
+                        <input asp-for="Complaint.IsAnonymous" /> @Html.DisplayNameFor(model => model.Complaint.IsAnonymous))
                     </label>
                 </div>
             </div>
