--- a/ManagementSystem/ManagementSystem.Web/Pages/Finance/Index.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Finance/Index.cshtml
@@ -1,48 +1,17 @@
 ﻿@page
 @model ManagementSystem.Web.Pages.Finance.IndexModel
-
 @{
     ViewData["Title"] = "Index";
 }
 
+@section Styles
+    {
+    <style>
+        body {
+            padding-top: 4em;
+        }
+    </style>
+}
+
 <h2>Index</h2>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.OperationCost[0].Time)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.OperationCost[0].Reason)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.OperationCost[0].Amount)
-                </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.OperationCost) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Time)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Reason)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Amount)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
