init operation cost page, add SidebarManager

--- a/ManagementSystem/ManagementSystem.Web/Pages/_Layout.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/_Layout.cshtml
@@ -80,7 +80,7 @@
 
     <!--Sidebar-->
     <div class="wrapper">
-        <div class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
+        <div id="mySidebar" class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
             <!--
                 Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
 
@@ -93,7 +93,7 @@
             </div>
             <div class="sidebar-wrapper">
                 <ul class="nav">
-                    <li class="nav-item active ">
+                    <li class="nav-item @(SidebarManager.GetClass(Page.Dashboard))">
                         <a class="nav-link" href="~/">
                             <i class="material-icons">dashboard</i>
                             <p>Dashboard</p>
@@ -105,10 +105,10 @@
                             <p>User Profile</p>
                         </a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="../examples/table.html">
+                    <li class="nav-item @(SidebarManager.GetClass(Page.Finance))">
+                        <a class="nav-link" href="../Finance">
                             <i class="material-icons">content_paste</i>
-                            <p>Table List</p>
+                            <p>Finance</p>
                         </a>
                     </li>
                     <li class="nav-item ">
