--- a/ManagementSystem/ManagementSystem.Web/Pages/Finance/OperationCost/Edit.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Finance/OperationCost/Edit.cshtml
@@ -1,38 +1,49 @@
 ﻿@page
 @model ManagementSystem.Web.Pages.Finance.OperationCost.EditModel
 
-<h4>OperationCost</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="OperationCost.Id" />
-            <div class="form-group">
-                <label asp-for="OperationCost.Time" class="control-label"></label>
-                <input asp-for="OperationCost.Time" class="form-control" />
-                <span asp-validation-for="OperationCost.Time" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="OperationCost.Reason" class="control-label"></label>
-                <input asp-for="OperationCost.Reason" class="form-control" />
-                <span asp-validation-for="OperationCost.Reason" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="OperationCost.Amount" class="control-label"></label>
-                <input asp-for="OperationCost.Amount" class="form-control" />
-                <span asp-validation-for="OperationCost.Amount" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </form>
-    </div>
-</div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
+@section Styles
+    {
+    <style>
+        body {
+            padding-top: 4em;
+        }
+    </style>
+}
+
+
+    <div class="container">
+        <h2>Edit transaction below</h2>
+        <hr />
+        <div class="row">
+            <div class="col-md-4">
+                <form method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="OperationCost.Id" />
+                    <div class="form-group">
+                        <label asp-for="OperationCost.Time" class="control-label"></label>
+                        <input asp-for="OperationCost.Time" class="form-control" />
+                        <span asp-validation-for="OperationCost.Time" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="OperationCost.Reason" class="control-label"></label>
+                        <input asp-for="OperationCost.Reason" class="form-control" />
+                        <span asp-validation-for="OperationCost.Reason" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="OperationCost.Amount" class="control-label"></label>
+                        <input asp-for="OperationCost.Amount" class="form-control" />
+                        <span asp-validation-for="OperationCost.Amount" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
