--- a/ManagementSystem/ManagementSystem.Web/Pages/_Layout.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/_Layout.cshtml
@@ -106,7 +106,7 @@
                         </a>
                     </li>
                     <li class="nav-item @(SidebarManager.GetClass(Page.Finance))">
-                        <a class="nav-link" href="../Finance">
+                        <a class="nav-link" href="/Finance">
                             <i class="material-icons">content_paste</i>
                             <p>Finance</p>
                         </a>
