Bind products to Index and added mock up Analytics pages

--- a/ManagementSystem/ManagementSystem.Web/Pages/Product/Create.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Product/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
-@model ManagementSystem.Web.Pages.Product.AddModel
+@model ManagementSystem.Web.Pages.Product.CreateModel
 
 <div class="container">
-    <h3>Add new Product</h3>
+    <h2>Add new Product</h2>
     <hr />
     <div class="row">
         <div class="col-md-12">
