--- a/ManagementSystem/ManagementSystem.Web/Pages/Product/_Layout.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Product/_Layout.cshtml
@@ -19,48 +19,43 @@
         </div>
         <div class="sidebar-wrapper">
             <ul class="nav">
-                <li class="nav-item active ">
-                    <a class="nav-link" href="../examples/dashboard.html">
+                <li id="dashboard_li" class="nav-item active">
+                    <a class="nav-link" asp-page="/Product/Index">
                         <i class="material-icons">dashboard</i>
                         <p>Dashboard</p>
                     </a>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="../examples/user.html">
-                        <i class="material-icons">person</i>
-                        <p>User Profile</p>
+                <li id="product_li" class="nav-item ">
+                    <a class="nav-link" asp-page="./Product">
+                        <i class="material-icons">card_travel</i>
+                        <p>Products</p>
                     </a>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="../examples/table.html">
-                        <i class="material-icons">content_paste</i>
-                        <p>Table List</p>
+                <li id="build_li" class="nav-item ">
+                    <a class="nav-link" asp-page="./Build">
+                        <i class="material-icons">build</i>
+                        <p>Builds</p>
                     </a>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="../examples/typography.html">
-                        <i class="material-icons">library_books</i>
-                        <p>Typography</p>
+                <li id="report_li" class="nav-item ">
+                    <a class="nav-link" asp-page="./Report">
+                        <i class="material-icons">bug_report</i>
+                        <p>Reports</p>
                     </a>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="../examples/icons.html">
-                        <i class="material-icons">bubble_chart</i>
-                        <p>Icons</p>
+                <li id="team_li" class="nav-item ">
+                    <a class="nav-link" asp-page="./Team">
+                        <i class="material-icons">people</i>
+                        <p>Teams</p>
                     </a>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="../examples/maps.html">
-                        <i class="material-icons">location_ons</i>
-                        <p>Maps</p>
+                <li id="analytics_li" class="nav-item ">
+                    <a class="nav-link" asp-page="./Analytics/Index">
+                        <i class="material-icons">assessment</i>
+                        <p>Analytics</p>
                     </a>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="../examples/notifications.html">
-                        <i class="material-icons">notifications</i>
-                        <p>Notifications</p>
-                    </a>
-                </li>
+
                 <li class="nav-item active-pro">
                     <a class="nav-link" href="../examples/upgrade.html">
                         <i class="material-icons">unarchive</i>
