--- a/ManagementSystem/ManagementSystem.Web/Pages/Finance/AllowanceSalary/Delete.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Finance/AllowanceSalary/Delete.cshtml
@@ -25,10 +25,10 @@
             @Html.DisplayFor(model => model.AllowanceSalary.Allowance.Id)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.AllowanceSalary.Salary)
+            @Html.DisplayNameFor(model => model.AllowanceSalary.ApplicationUser)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.AllowanceSalary.Salary.Id)
+            @Html.DisplayFor(model => model.AllowanceSalary.ApplicationUserId)
         </dd>
     </dl>
     
