--- a/ManagementSystem/ManagementSystem.Web/Pages/Finance/AllowanceSalary/Create.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Finance/AllowanceSalary/Create.cshtml
@@ -18,8 +18,8 @@
                 <span asp-validation-for="AllowanceSalary.ReceivedDay" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AllowanceSalary.SalaryId" class="control-label"></label>
-                <select asp-for="AllowanceSalary.SalaryId" class ="form-control" asp-items="ViewBag.SalaryId"></select>
+                <label asp-for="AllowanceSalary.ApplicationUserId" class="control-label"></label>
+                <select asp-for="AllowanceSalary.ApplicationUserId" class ="form-control" asp-items="ViewBag.ApplicationUserId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="AllowanceSalary.AllowanceId" class="control-label"></label>
