--- a/ManagementSystem/ManagementSystem.Web/Pages/Finance/AllowanceSalary/Edit.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Finance/AllowanceSalary/Edit.cshtml
@@ -19,9 +19,9 @@
                 <span asp-validation-for="AllowanceSalary.ReceivedDay" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AllowanceSalary.SalaryId" class="control-label"></label>
-                <select asp-for="AllowanceSalary.SalaryId" class="form-control" asp-items="ViewBag.SalaryId"></select>
-                <span asp-validation-for="AllowanceSalary.SalaryId" class="text-danger"></span>
+                <label asp-for="AllowanceSalary.ApplicationUserId" class="control-label"></label>
+                <select asp-for="AllowanceSalary.ApplicationUserId" class="form-control" asp-items="ViewBag.ApplicationUserId"></select>
+                <span asp-validation-for="AllowanceSalary.ApplicationUserId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AllowanceSalary.AllowanceId" class="control-label"></label>
