Fix-Model, Completed Create, Edit

--- a/ManagementSystem/ManagementSystem.Web/Pages/_Layout.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/_Layout.cshtml
@@ -99,10 +99,10 @@
                             <p>Dashboard</p>
                         </a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="../examples/user.html">
+                    <li class="nav-item @(SidebarManager.GetClass(Page.Personnel))">
+                        <a class="nav-link" href="/HumanResource">
                             <i class="material-icons">person</i>
-                            <p>User Profile</p>
+                            <p>Personnel</p>
                         </a>
                     </li>
                     <li class="nav-item @(SidebarManager.GetClass(Page.Finance))">
