--- a/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/UserProfile/Delete.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/UserProfile/Delete.cshtml
@@ -5,144 +5,84 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+@section Styles
+    {
+    <style>
+        body {
+            padding-top: 4em;
+        }
+    </style>
+}
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ApplicationUser</h4>
+
+<div class="container">
+    <h3>Are you sure you want to delete this profile?</h3>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.FirstName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.FirstName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.LastName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.LastName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.IdentityCard)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.IdentityCard)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.IsLady)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.IsLady)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.Address)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.Address)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.YearOfBirth)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.YearOfBirth)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.UserName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.UserName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.NormalizedUserName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.NormalizedUserName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.Email)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.Email)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.NormalizedEmail)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.NormalizedEmail)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.EmailConfirmed)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.EmailConfirmed)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.PasswordHash)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.PasswordHash)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.SecurityStamp)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.SecurityStamp)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.ConcurrencyStamp)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.ConcurrencyStamp)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.PhoneNumber)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.PhoneNumber)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.PhoneNumberConfirmed)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.PhoneNumberConfirmed)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.TwoFactorEnabled)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.TwoFactorEnabled)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.LockoutEnd)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.LockoutEnd)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.LockoutEnabled)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.LockoutEnabled)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.AccessFailedCount)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.AccessFailedCount)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.JobPosition)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.JobPosition.Id)
-        </dd>
-    </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="ApplicationUser.Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+
+    <div>
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.ApplicationUser.FirstName)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ApplicationUser.FirstName)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ApplicationUser.LastName)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ApplicationUser.LastName)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ApplicationUser.IdentityCard)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ApplicationUser.IdentityCard)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ApplicationUser.IsLady)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ApplicationUser.IsLady)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ApplicationUser.Address)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ApplicationUser.Address)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ApplicationUser.YearOfBirth)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ApplicationUser.YearOfBirth)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ApplicationUser.Email)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ApplicationUser.Email)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ApplicationUser.PhoneNumber)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ApplicationUser.PhoneNumber)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ApplicationUser.JobPosition)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ApplicationUser.JobPosition.Name)
+            </dd>
+        </dl>
+
+        <form method="post">
+            <input type="hidden" asp-for="ApplicationUser.Id" />
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            <a asp-page="./Index" class="btn btn-grey">Back</a>
+        </form>
+    </div>
+
 </div>
+
